# ylem

./: README.md  pyproject.toml
notebooks/: demo_utility.ipynb
scripts/: gemma3_train_on_completions.py  smoke_cleaner.py  test_script.py
src/ylem/: __init__.py  cleaner.py
