[project]
name = "ylem"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sumuk Shashidhar", email = "sumukuuu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.40.0,<5",
]

[project.scripts]
ylem = "ylem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
